# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  game_carcass.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_carcass.py
