[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "First project Schvp"
authors = ["Viktor Shcherbakov <evil.logitech@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:play_game"
brain-calc = "brain_games.scripts.brain_calc:play_game"
brain-gcd = "brain_games.scripts.brain_gcd:play_game"
brain-progression = "brain_games.scripts.brain_progression:play_game"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
